syntax = "proto3";
package feemarket.feemarket.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "feemarket/feemarket/v1/params.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/CosmosContracts/juno/x/feemarket/types";

// Message service defines the types of messages supported by the feemarket
// module.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // Params defines a method for updating the feemarket module parameters.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgUpdateParams defines the Msg/UpdateParams request type. It contains the
// new parameters for the feemarket module.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // Params defines the new parameters for the feemarket module.
  Params params = 1 [(gogoproto.nullable) = false];
  // Authority defines the authority that is updating the feemarket module
  // parameters.
  string authority = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgUpdateParamsResponse defines the Msg/UpdateParams response type.
message MsgUpdateParamsResponse {}
